# FaaS-Workflow-Sim

./: README.md  pyproject.toml
docs/: 无服务器工作流单智能体强化学习环境设计.md  无服务器工作流多智能体强化学习环境设计.md
examples/: obs_and_rew.py  raw_env.py  utils.py
images/: container_execution_model.drawio
src/faas_workflow_sim/: __init__.py  config.py  function.py  numa_node.py  workflow_template.py
src/faas_workflow_sim/tools/: __init__.py  dax_parser.py
src/serverless_workflow_arena/: cluster.py  config.py  container.py  env_log.py  location.py  numa_node.py  raw_env.py  server.py  workflow.py  workload.py
src/serverless_workflow_arena/tools/: memory_generator.py  parallelism_generator.py  pretty_json.py
tests/: test_cluster.py  test_config.py  test_container.py  test_dax_parser.py  test_function.py  test_memory_generator.py  test_numa_node.py  test_parallelism_generator.py  test_pretty_json.py  test_raw_env.py  test_server.py  test_workflow.py  test_workflow_template.py  test_workload.py
tests/data/: cluster_config.yaml
