[project]
name = "faas-workflow-sim"
version = "0.1.0"
description = "A simulation framework for workflow resource allocation in serverless (FaaS) computing environments."
readme = "README.md"
authors = [
    { name = "liuzhaoze", email = "" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
