[project]
name = "faas-workflow-sim"
version = "0.1.0"
description = "A simulation framework for workflow resource allocation in serverless (FaaS) computing environments."
readme = "README.md"
authors = [
    { name = "liuzhaoze", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "rustworkx>=0.17.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
